fix seigaiha overlapping content

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Chivo');
 
+html {
+  height: 100%;
+}
+
 body {
   font-size: 16px;
   font-family: "Open Sans", Arial, sans-serif;
@@ -36,10 +40,12 @@ body {
 
 .container {
   width: 92%;
+  background-color: #fefefe;
 }
 
 .container-fluid {
   padding: 0;
+  background-color: #fefefe;
 }
 
 h1, h2, h3, h4 {
@@ -242,26 +248,23 @@ span.avoid-wrap {
 
 #illo.index {
 
-  .project-container {
+  .illo-cover-container {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
 
-    .illo-cover-container {
-      position: relative;
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      margin: auto;
+      z-index: -1;
       width: 100%;
       height: 500px;
-      overflow: hidden;
-
-      img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        margin: auto;
-        z-index: -1;
-        width: 100%;
-        height: 500px;
-        object-fit: cover;
-      }
+      object-fit: cover;
     }
   }
 }
@@ -298,6 +301,7 @@ span.avoid-wrap {
       border-top: 1px solid #ddd;
       padding: 45px 0;
       width: 100%;
+      background-color: #fefefe;
     }
 
     img {
